Updated packages to use the svn_info hooks, and to get their version numbers from pkg_resources.  I only did this with packages that were already using __svn_version__, __full_svn_info__, etc. to begin with.
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/stsci_python/trunk/pydrizzle@13327 fe389314-cf27-0410-b35b-8c050e845b92

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pydrizzle
-version = 6.0.0
+version = 6.3.7
 author = Warren Hack
 author-email = help@stsci.edu
 summary = Geometrically correct and combine images using Drizzle
@@ -206,6 +206,14 @@ commands = stsci.distutils.command.easier_install.easier_install
 setup_hooks =
     stsci.distutils.hooks.use_packages_root
     pydrizzle_setup.setup_hook
+
+[sdist]
+pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
+post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook
+
+[build_py]
+pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
+post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook
 
 [easy_install]
 find-links = ..
