Converted pydrizzle over to the new package layout--most of this work was carried over from my previous effort, with some slight tweaks.  I also removed some irrelevant 'setup.py' bits from the included traits102 package.  Though Warren had told me previously that we could consider removing it all together. Just need to rip some of the things that use it out of multidrizzle first.
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/pydrizzle/trunk@19033 fe389314-cf27-0410-b35b-8c050e845b92

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pydrizzle
-version = 6.3.7
+version = 6.4.0.dev
 author = Warren Hack
 author-email = help@stsci.edu
 summary = Geometrically correct and combine images using Drizzle
@@ -14,12 +14,11 @@ classifier =
     Topic :: Software Development :: Libraries :: Python Modules
 requires-python = >=2.5
 requires-dist =
-    stsci.tools (==3.0)
-    pyfits (>=2.4.0)
+    stsci.tools (>=3.1.dev)
+    pyfits (>=3.1.0)
     numpy (>=1.5.1)
 
 [files]
-packages_root = lib
 packages =
     pydrizzle
     pydrizzle.distortion
@@ -198,22 +197,11 @@ include_dirs =
     libf2c
     numpy
 
+[global]
+setup-hooks =
+    stsci.distutils.hooks.tag_svn_revision
+    stsci.distutils.hooks.version_setup_hook
+    pydrizzle._setup_helpers.setup_hook
+
 [build_ext]
 pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook
-
-[global]
-commands = stsci.distutils.command.easier_install.easier_install
-setup_hooks =
-    stsci.distutils.hooks.use_packages_root
-    pydrizzle_setup.setup_hook
-
-[sdist]
-pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
-post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook
-
-[build_py]
-#pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
-#post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook
-
-[easy_install]
-find-links = ..
