Move _setup_helpers.py out of the pydrizzle package. This caused problems if stsci.tools is not already installed, because importing the pydrizzle package tries to import stsci.tools.  There are some ways this can be mitigated, for example preventing certain imports when running the setup.  But in the meantime this is an easier fix.
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/pydrizzle/trunk@19351 fe389314-cf27-0410-b35b-8c050e845b92

--- a/setup.cfg
+++ b/setup.cfg
@@ -201,7 +201,7 @@ include_dirs =
 setup-hooks =
     stsci.distutils.hooks.tag_svn_revision
     stsci.distutils.hooks.version_setup_hook
-    pydrizzle._setup_helpers.setup_hook
+    setup_hooks.setup_hook
 
 [build_ext]
 pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook
