remove specific version requirements
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/pydrizzle/trunk@21706 fe389314-cf27-0410-b35b-8c050e845b92

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,8 @@ classifier =
     Topic :: Software Development :: Libraries :: Python Modules
 requires-python = >=2.5
 requires-dist =
-    stsci.tools (>=3.1.dev)
-    pyfits (>=3.1.0)
+    stsci.tools 
+    pyfits 
     numpy (>=1.5.1)
 
 [files]
