--- a/setup.cfg
+++ b/setup.cfg
@@ -12,10 +12,10 @@ classifier =
 	Programming Language :: Python
 	Topic :: Scientific/Engineering :: Astronomy
 	Topic :: Software Development :: Libraries :: Python Modules
-requires-python = >=2.5
+requires-python = >=2.6
 requires-dist = 
 	stsci.tools
-	pyfits
+	pyfits (>=3.1.1,<=3.1.99)
 	numpy (>=1.5.1)
 
 [files]
