--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ author = Warren Hack
 author-email = help@stsci.edu
 summary = Geometrically correct and combine images using Drizzle
 home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
+download_url = http://ssb.stsci.edu/pypi/pydrizzle
 classifier = 
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: BSD License
