make pyfits dependency open-ended
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/pydrizzle/trunk@28968 fe389314-cf27-0410-b35b-8c050e845b92

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifier =
 requires-python = >=2.6
 requires-dist = 
 	stsci.tools
-	pyfits (>=3.1.1,<=3.1.99)
+	pyfits (>=3.1.1)
 	numpy (>=1.5.1)
 
 [files]
