--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifier =
 requires-python = >=2.6
 requires-dist = 
 	stsci.tools
-	pyfits (>=3.1.1)
+	astropy (>=0.3.1)
 	numpy (>=1.5.1)
 
 [files]
