--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pydrizzle
-version = 6.4.4.dev
+version = 6.4.4
 author = Warren Hack
 author-email = help@stsci.edu
 summary = Geometrically correct and combine images using Drizzle
